--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
  </div>
- <div class="popup popup_opened">
+ <div class="popup">
     <div class="popup__container">
         <button type="button" aria-label="Закрыть" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
