--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <h3 class="popup__title">Редактировать профиль</h3>
       <form name="form" class="popup__input-form">
         <div class="popup__input-container">
-          <input placeholder="Имя" type="text" name="name" class="popup__input"/>
-          <input placeholder="Работа" type="text" name="description" class="popup__input"/>
+          <input placeholder="Имя" type="text" name="name" class="popup__input">
+          <input placeholder="Работа" type="text" name="description" class="popup__input">
         </div>
         <button type="submit" name="button-edit" class="popup__submit">Сохранить</button>
       </form>
