--- a/index.html
+++ b/index.html
@@ -27,48 +27,7 @@
         </section>
         <section class="elements">
             <ul class="elements__group">
-                <li class="element">
-                    <img src="./image/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-                    <div class="element__info">
-                        <h2 class="element__name">Карачаевск</h2>
-                        <button type="button" aria-label="like-button" class="element__like"></button>
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./image/elbrus.jpg" alt="Эльбрус" class="element__image">
-                    <div class="element__info">
-                        <h2 class="element__name">Гора Эльбрус</h2>
-                        <button type="button" aria-label="like-button" class="element__like"></button>
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./image/dombai.jpg" alt="Домбай" class="element__image">
-                    <div class="element__info">
-                        <h2 class="element__name">Домбай</h2>
-                        <button type="button" aria-label="like-button" class="element__like"></button>
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./image/elbrus.jpg" alt="Эльбрус" class="element__image">
-                    <div class="element__info">
-                        <h2 class="element__name">Гора Эльбрус</h2>
-                        <button type="button" aria-label="like-button" class="element__like"></button>
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./image/dombai.jpg" alt="Домбай" class="element__image">
-                    <div class="element__info">
-                        <h2 class="element__name">Домбай</h2>
-                        <button type="button" aria-label="like-button" class="element__like"></button>
-                    </div>
-                </li>
-                <li class="element">
-                    <img src="./image/karachaevsk.jpg" alt="Карачаево-Черкесия" class="element__image">
-                    <div class="element__info">
-                        <h2 class="element__name">Карачаево-Черкесия</h2>
-                        <button type="button" aria-label="like-button" class="element__like"></button>
-                    </div>
-                </li>
+
             </ul>
         </section>
     </main>
@@ -76,16 +35,46 @@
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
  </div>
- <div class="popup">
+ <div class="popup" id="popup_edit">
     <div class="popup__container">
         <button type="button" aria-label="Закрыть" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form name="form" class="popup__input-form">
-        <input placeholder="Имя" type="text" name="name" class="popup__input">
-        <input placeholder="Работа" type="text" name="description" class="popup__input">
+      <form name="form" class="popup__input-form" id="popup-editform">
+        <input placeholder="Имя" type="text" name="name" class="popup__input" id="name">
+        <input placeholder="Работа" type="text" name="description" class="popup__input" id="description">
         <button type="submit" name="button-edit" class="popup__submit">Сохранить</button>
       </form>
     </div>
-  </div>    
+  </div>
+ <div class="popup" id="popup_add">
+    <div class="popup__container">
+        <button type="button" aria-label="Закрыть" class="popup__close"></button>
+      <h3 class="popup__title">Новое место</h3>
+      <form name="form" class="popup__input-form" id="popup-addform">
+        <input placeholder="Название" type="text" name="linkname" class="popup__input" id="linkname">
+        <input placeholder="Ссылка на картинку" type="url-img" name="description" class="popup__input" id="url-img">
+        <button type="submit" name="button-edit" class="popup__submit">Создать</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_photo" id="popup-photo">
+    <div class="popup__image-container">
+      <img src="" class="popup__image" alt="">
+      <h2 class="popup__text"></h2>
+      <button type="button" class="popup__close" aria-label="Закрыть"></button>
+    </div>
+  </div>
+  <template id="card">
+    <li class="element">
+        <button type="button" class="element__delete-button" aria-label="Удалить"></button>
+        <img src="./image/karachaevsk.jpg" alt="Карачаевск" class="element__image">
+        <div class="element__info">
+            <h2 class="element__name">Карачаевск</h2>
+            <button type="button" aria-label="like-button" class="element__like"></button>
+        </div>
+    </li>
+</template>
+<script src="./scripts/cards.js"></script> 
+<script src="./scripts/index.js"></script> 
 </body>
 </html>
