--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
         <section class="profile">
             <div class="profile__info">
                 <div class="profile__avatar-base">
-                    <img src="<%=require('./image/avatar.jpg')%>" alt="Аватар" class="profile__avatar">
+                    <img alt="Аватар" class="profile__avatar">
                 </div>
                 <div class="profile__head">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <h1 class="profile__name"></h1>
                     <button type="button" aria-label="edit-button" class="profile__edit-button"></button>
                 </div>
-                <p class="profile__job">Исследователь океана</div>
+                <p class="profile__job"></div>
             <button type="button" aria-label="add-button" class="profile__add-button"></button>
         </section>
         <section class="elements">
@@ -96,6 +96,23 @@
       </form>
     </div>
   </div>
+  <div class="popup" id="popup_avatar">
+    <div class="popup__container">
+        <button type="button" aria-label="Закрыть" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form name="form" class="popup__input-form" id="popup-avatarform" novalidate>
+        <input placeholder="Ссылка на новый аватар" 
+        type="url" 
+        name="avatar" 
+        class="popup__input" 
+        id="avatar" 
+        value ="" 
+        required>
+        <span class="popup__input-error avatar-error"></span>
+        <button type="submit" name="button-edit" class="popup__submit">Создать</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_photo" id="popup-photo">
     <div class="popup__image-container">
       <img src="" class="popup__image" alt="">
@@ -109,7 +126,10 @@
         <img src="./image/karachaevsk.jpg" alt="Карачаевск" class="element__image">
         <div class="element__info">
             <h2 class="element__name">Карачаевск</h2>
+            <div class="element__like-container">
             <button type="button" aria-label="like-button" class="element__like"></button>
+            <p class="element__likes-value"></p>
+            </div>
         </div>
     </li>
 </template>
