--- a/src/index.html
+++ b/src/index.html
@@ -204,5 +204,16 @@
         </div>
       </li>
     </template>
+    <div class="popup popup__remove-card">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+        <form name="formRemoveCard" class="popup__input-form" id="remove-card" novalidate>
+          <h2 class="popup__title">Вы уверены?</h2>
+          <button type="submit" class="popup__submit popup__submit-yes">
+            Да
+          </button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
